--- a/doze/res/xml/gesture_panel.xml
+++ b/doze/res/xml/gesture_panel.xml
@@ -19,8 +19,8 @@
         android:key="ambient_display_key"
         android:title="@string/ambient_display_title">
 
-        <cyanogenmod.preference.SecureSettingSwitchPreference
-            android:key="doze_enabled"
+        <SwitchPreference
+            android:key="ambient_display_enable"
             android:defaultValue="true"
             android:title="@string/ambient_display_enable_title"
             android:summary="@string/ambient_display_enable_summary" />
@@ -29,15 +29,13 @@
             android:key="gesture_hand_wave"
             android:defaultValue="false"
             android:title="@string/hand_wave_gesture_title"
-            android:summary="@string/hand_wave_gesture_summary"
-            android:dependency="doze_enabled" />
+            android:summary="@string/hand_wave_gesture_summary" />
 
         <SwitchPreference
             android:key="gesture_pocket"
             android:defaultValue="false"
             android:title="@string/pocket_gesture_title"
-            android:summary="@string/pocket_gesture_summary"
-            android:dependency="doze_enabled" />
+            android:summary="@string/pocket_gesture_summary" />
     </PreferenceCategory>
     <PreferenceCategory
         android:key="proximity_wake_key"
